8288949: serviceability/jvmti/vthread/ContStackDepthTest/ContStackDepthTest.java failing

Reviewed-by: dlong, eosterlund, rehn