src/hotspot/share/runtime/continuationEntry.hpp
@@ -52,10 +52,13 @@ public:
 
 public:
   static int _return_pc_offset; // friend gen_continuation_enter
-  static void set_enter_code(CompiledMethod* nm); // friend SharedRuntime::generate_native_wrapper
+  static void set_enter_code(CompiledMethod* cm, int interpreted_entry_offset);
+  static bool is_interpreted_call(address call_address);
 
 private:
   static address _return_pc;
+  static CompiledMethod* _enter_special;
+  static int _interpreted_entry_offset;
 
 private:
   ContinuationEntry* _parent;
@@ -88,6 +91,11 @@ public:
   static address entry_pc() { return _return_pc; }
   intptr_t* entry_sp() const { return (intptr_t*)this; }
   intptr_t* entry_fp() const;
+
+  static address compiled_entry();
+  static address interpreted_entry();
+
+  static CompiledMethod* enter_special() { return _enter_special; }
 
   int argsize() const { return _argsize; }
   void set_argsize(int value) { _argsize = value; }
